quartet_dnaseq_report/templates/default/assets/css/default_multiqc.css
/* ... */
.mqc_switch_wrapper .off::after, .mqc_switch_wrapper .on::before{
    content: "";
    display: inline-block;
    height: 0;
    width: 0;
    border-radius: 6px;
    border: 6px solid #fff;
}
.mqc_switch_wrapper .off::after{
    margin: 0 0 -2px 5px;
}
.mqc_switch_wrapper .on::before{
    margin: 0 5px -2px 0;
}
.mqc_switch_wrapper .on {
    background-color:#5bc0de;
    color: #fff;
}

.mqc_filter_section {
    padding:10px;
}
.mqc_filter_section hr {
    margin: 10px 0;
    border-top: 1px solid #ccc;
}
.mqc_filter_section p {
    font-size: 85%;
    padding:0;
    margin: 5px 0;
    color: #666;
}
.mqc_filter_section .text-danger {
    color: #a94442;
}
.mqc_filter_section p a {
    color: #666;
}
.mqc_filter_section p .btn {
    color: #333;
}
.mqc_filter_section .text-success {
    color: #3c763d;
}
.mqc_filter_section .form-inline .form-control {
    vertical-align: middle;
}
@media only screen and (max-width: 768px){
    .mqc_filter_section .form-control {
        display: inline-block;
    }
    .mqc_filter_section input[type="text"] { width: auto; }
}
#mqc_renamesamples input[type="text"] {
    width: 80px;
}

#mqc_renamesamples_bulk_collapse {
    border-top: 1px solid #CCC;
}
#mqc_renamesamples_bulk_update {
    margin-top: 5px;
}
#mqc_renamesamples_bulk_form textarea {
    font-size: 8px;
    color: #999;
}
.f_text {
    border: 0;
    border-bottom: 1px solid #ccc;
    padding: 5px 0 5px 10px;
    margin: 0;
    background-color: transparent;
    outline: none;
    width: -moz-calc(100% - 55px);
    width: -webkit-calc(100% - 55px);
    width: calc(100% - 55px);
}
.f_text:focus {
    background-color: #f6f6f6;
}
.from_text, .to_text {
    width: -moz-calc(49% - 20px);
    width: -webkit-calc(49% - 20px);
    width: calc(49% - 20px);
}

#mqc_exportplots .col-sm-6 {
  padding: 0 10px 0 0;
}
#mqc_exportplots .checkbox, #mqc_exportplots .data-format {
  margin: 8px 0 0;
  font-size: 12px;
  line-height: normal;
}
#mqc_exportplots .data-format label {
    font-weight: 400;
}
#mqc_exportplots .checkbox label {
  min-height: 0;
}
#mqc_exportplots .checkbox input {
  margin-top: 0;
}
#mqc_exportplots blockquote {
  font-size: 0.7em;
  padding: 0 0 0 10px;
  border-left: 2px solid #cccccc;
  color: #666;
}
#mqc_exportplots blockquote a {
  text-decoration: underline;
}

#mqc_exportplots .nav-tabs {
    border-color: #cccccc;
    margin-bottom: 15px;
}
#mqc_exportplots .nav-tabs li a {
    background-color: #dddddd;
    border-color: #cccccc;
    padding: 8px 10px;
    color: #999;
    font-size: 12px;
}
#mqc_exportplots .nav-tabs li.active a {
    background-color: #eeeeee;
    border-bottom-color: transparent;
    color: #333;
}

#mqc-save-success {
    color: #3c763d;
    background-color: #dff0d8;
}
#mqc-cleared-success {
    color: #a94442;
    background-color: #f2dede;
}

#mqc_about p {
  margin-bottom: 10px;
}
#mqc_about a {
  text-decoration: underline;
}
#mqc_about blockquote {
  font-size: 0.8em;
  padding: 0 0 0 10px;
  border-left: 2px solid #cccccc;
  color: #666;
}

/* Regex help modal */
.regex_example_buttons button {
    float: left;
    clear: left;
    margin-bottom: 8px;
}
.regex_example_demo input {
    margin-bottom: 8px;
    font-family: 'Consolas', 'Monaco', 'Courier New', Courier, monospace;
}


/* MultiReport tables */
.table tr td {
    font-size:0.9em;
    height: 30px;
}
.mqc_table tbody tr td .wrapper .val {
    z-index: -1;
}
.mqc_table tbody tr td .wrapper .val .label {
    font-size: 100%;
    display: inline-block;
    min-width: 10px;
    padding: 3px 7px;
    font-size: 12px;
    vertical-align: middle;
    border-radius: 10px;
}
.mqc-table-responsive.mqc-table-collapse {
    max-height: 500px;
}
.mqc-table-responsive {
    overflow: auto;
}
.table.mqc_table > thead > tr > th {
    cursor: pointer;
    /* Border doesn't scroll with the CSS transform, so just a box-shadow instead. */
    border-bottom: 0;
    -webkit-box-shadow: inset 0px -2px 0px 0 #ddd;
    -moz-box-shadow: inset 0px -2px 0px 0 #ddd;
    box-shadow: inset 0px -2px 0px 0 #ddd;
}
.mqc_table thead th, .mqc_table thead td {
    background-color: #FFFFFF;
}
.mqc_table thead th:after {
    content: "";
    display: inline-block;
    width: 0;
    height: 0;
    margin-left: 4px;
    vertical-align: middle;
    border-right: 4px solid transparent;
    border-left: 4px solid transparent;
}
.mqc_table thead th.headerSortDown:after {
    border-bottom: 4px dashed;
}
.mqc_table thead th.headerSortUp:after {
    border-top: 4px dashed;
}
.mqc_table thead th.headerSortDown, .mqc_table thead th.headerSortUp {
    background-color: #ededed;
    color: #1ca8dd;
    border-bottom: 2px solid #1ca8dd;
}
.mqc_table th {
    white-space: nowrap;
}
.mqc-table-expand {
    text-align: center;
    color: #999;
    padding: 5px;
    cursor: pointer;
    background-color: #ffffff;
    -webkit-transition: background-color 0.2s;
    transition: background-color 0.2s;
}
.mqc-table-expand:hover, .mqc-table-expand:focus, .mqc-table-expand:active {
    background-color: #ededed;
}

.mqc_table_numrows_text {
    padding: 5px 10px;
    font-size: 12px;
    vertical-align: middle;
}







.sorthandle {
    border-right: none;
    font-weight:bold;
    text-align: center;
}
tbody .sorthandle {
    cursor: pointer;
    color: #ccc;
}
.mqc_configModal_table tbody .sorthandle {
    color: #999;
}
.mqc_table .rowheader {
    border-left: none;
}
.mqc_table tr, .mqc_table td {
    height: 100%;
}
.mqc_table .data-coloured {
    padding: 0;
}
.mqc_table .wrapper {
    display: inline-block;
    position: relative;
    height:100%;
    width:100%;
    z-index: -10;
}
.mqc_table .bar {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    background-color: #dedede;
    z-index:-1;
}
.mqc_table .val {
    display: block;
    position: absolute;
    padding: 5px;
    left:0;
}

/* Flat MatPlotLib plots */
.mqc_mplplot {
    border: 1px solid #dedede;
    margin-top: 15px;
}
/* ... */

